# rag-evaluation-system

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  app.py  brainstorm.md  implementation_plan.md  pyproject.toml
.claude/agents/: python-expert-coder.md
.claude/skills/developing-with-streamlit/: SKILL.md
.claude/skills/developing-with-streamlit/skills/building-streamlit-chat-ui/: SKILL.md
.claude/skills/developing-with-streamlit/skills/building-streamlit-multipage-apps/: SKILL.md
.claude/skills/developing-with-streamlit/skills/customizing-streamlit-theme/: SKILL.md
.claude/skills/developing-with-streamlit/skills/displaying-streamlit-data/: SKILL.md
.claude/skills/developing-with-streamlit/skills/optimizing-streamlit-performance/: SKILL.md
.claude/skills/developing-with-streamlit/skills/using-streamlit-layouts/: SKILL.md
scripts/: convert_json_to_markdown.py  streamlit_app.py
src/rag_evaluation_system/: __init__.py
src/rag_evaluation_system/chunkers/: __init__.py  adapter.py  base.py  fixed_token.py  recursive_character.py  semantic.py
src/rag_evaluation_system/embedders/: __init__.py  base.py  openai.py  sentence_transformers.py
src/rag_evaluation_system/evaluation/: __init__.py  chunk_level.py  token_level.py
src/rag_evaluation_system/evaluation/metrics/: __init__.py  base.py
src/rag_evaluation_system/evaluation/metrics/chunk_level/: __init__.py  f1.py  precision.py  recall.py
src/rag_evaluation_system/evaluation/metrics/token_level/: __init__.py  iou.py  precision.py  recall.py  utils.py
src/rag_evaluation_system/langsmith/: __init__.py  client.py  schemas.py  upload.py
src/rag_evaluation_system/rerankers/: __init__.py  base.py  cohere.py
src/rag_evaluation_system/synthetic_datagen/: __init__.py  base.py
src/rag_evaluation_system/synthetic_datagen/chunk_level/: __init__.py  generator.py
src/rag_evaluation_system/synthetic_datagen/token_level/: __init__.py  generator.py
src/rag_evaluation_system/types/: __init__.py  chunks.py  documents.py  ground_truth.py  primitives.py  queries.py  results.py
src/rag_evaluation_system/utils/: __init__.py  hashing.py  text.py
src/rag_evaluation_system/vector_stores/: __init__.py  base.py  chroma.py
tests/: __init__.py  conftest.py
tests/chunkers/: __init__.py  test_adapter.py  test_chunkers.py  test_recursive_character.py
tests/evaluation/metrics/: __init__.py  test_chunk_level.py  test_token_level.py
tests/integration/: test_chunk_level_workflow.py  test_token_level_workflow.py
tests/synthetic_datagen/: __init__.py  test_chunk_level_generator.py  test_token_level_generator.py
tests/types/: __init__.py  test_chunks.py  test_documents.py
tests/utils/: test_hashing.py
